src/v7/CAPI_RegControls.pas


function RegControls_Get_Transformer():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(RegControls_Get_Transformer_AnsiString());
end;
//------------------------------------------------------------------------------
function RegControls_Get_VoltageLimit():Double;cdecl;
var
  elem: TRegControlObj;
begin
  Result := 0.0;
  elem := ActiveRegControl;
  if elem <> nil then Result := elem.VoltageLimit;
end;
//------------------------------------------------------------------------------
function RegControls_Get_Winding():Integer;cdecl;
var
  elem: TRegControlObj;
begin
  Result := 0;
  elem := ActiveRegControl;
  if elem <> nil then Result := elem.ElementTerminal;  // monitored winding
end;
//------------------------------------------------------------------------------
function RegControls_Get_TapNumber():Integer;cdecl;
var
  elem: TRegControlObj;
begin
  Result := 0;
  elem := ActiveRegControl;
  if elem <> nil then Result := elem.TapNum;  // tap number on the controlled-winding of the transformer controlled by this regcontrol
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_CTPrimary(Value: Double);cdecl;
begin
  Set_Parameter ('CTprim', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Delay(Value: Double);cdecl;
begin
  Set_Parameter ('Delay', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardBand(Value: Double);cdecl;
begin
  Set_Parameter ('Band', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardR(Value: Double);cdecl;
begin
  Set_Parameter ('R', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardVreg(Value: Double);cdecl;
begin
  Set_Parameter ('Vreg', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardX(Value: Double);cdecl;
begin
  Set_Parameter ('X', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_IsInverseTime(Value: WordBool);cdecl;
begin
  if Value = TRUE then
    Set_Parameter ('InverseTime', 'y')
  else
    Set_Parameter ('InverseTime', 'n');
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_IsReversible(Value: WordBool);cdecl;
begin
  if Value = TRUE then
    Set_Parameter ('Reversible', 'y')
  else
    Set_Parameter ('Reversible', 'n');
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_MaxTapChange(Value: Integer);cdecl;
begin
  Set_Parameter ('MaxTapChange', IntToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_MonitoredBus(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('Bus', Value);
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Name(const Value: PAnsiChar);cdecl;
var
  ActiveSave : Integer;
  S: String;
  Found :Boolean;
  elem: TRegControlObj;
  lst: TPointerList;
Begin
  IF ActiveCircuit <> NIL THEN Begin
    lst := ActiveCircuit.RegControls;
    S := Value;  // Convert to Pascal String
    Found := FALSE;
    ActiveSave := lst.ActiveIndex;
    elem := lst.First;
    While elem <> NIL Do Begin
      IF (CompareText(elem.Name, S) = 0) THEN Begin
        ActiveCircuit.ActiveCktElement := elem;
        Found := TRUE;
        Break;
      End;
      elem := lst.Next;
    End;
    IF NOT Found THEN Begin
      DoSimpleMsg('RegControl "'+S+'" Not Found in Active Circuit.', 5003);
      elem := lst.Get(ActiveSave);    // Restore active Load
      ActiveCircuit.ActiveCktElement := elem;
    End;
  End;
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_PTratio(Value: Double);cdecl;
begin
  Set_Parameter ('PTratio', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseBand(Value: Double);cdecl;
begin
  Set_Parameter ('RevBand', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseR(Value: Double);cdecl;
begin
  Set_Parameter ('RevR', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseVreg(Value: Double);cdecl;
begin
  Set_Parameter ('RevVreg', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseX(Value: Double);cdecl;
begin
  Set_Parameter ('RevX', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_TapDelay(Value: Double);cdecl;
begin
  Set_Parameter ('TapDelay', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_TapWinding(Value: Integer);cdecl;
begin
  Set_Parameter ('TapWinding', IntToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Transformer(const Value: PAnsiChar);cdecl;
begin
  Set_Parameter ('Transformer', Value);
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_VoltageLimit(Value: Double);cdecl;
begin
  Set_Parameter ('Vlimit', FloatToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Winding(Value: Integer);cdecl;
begin
  Set_Parameter ('Winding', IntToStr (Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_TapNumber(Value: Integer);cdecl;
begin
  Set_Parameter ('TapNum', IntToStr (Value));
end;
//------------------------------------------------------------------------------
function RegControls_Get_Count():Integer;cdecl;
begin
  If Assigned(Activecircuit) Then
     Result := ActiveCircuit.RegControls.ListSize;
end;
//------------------------------------------------------------------------------
procedure RegControls_Reset();cdecl;
var
  elem: TRegControlObj;
begin
  elem   := ActiveRegControl;
  if elem <> nil then begin
      elem.Reset;
  end;

end;
//------------------------------------------------------------------------------
END.
